update simple psd

--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
 <body>
 	<header>
 		<section class="top_nav">
-				<div class="logo">
+
+				<div class="tes_head">
+					<div class="logo">
 					<img src="img/logo.svg">
+					</div>
 				</div>
 				
 				<nav class="header_nav">
 					<ul>
-						<li><a href="#">Home</a></li>
+						<li><a class="active" href="#">Home</a></li>
 						<li><a href="#">Projects</a></li>
 						<li><a href="#">About</a></li>
 						<li><a href="#">Blog</a></li>
@@ -35,7 +38,15 @@
 				<p>Full suite of internet services in the areas of website development, web-based enterprise solutions, corporate identity and advertisement.</p>
 			
 				<a href="#" class="explore button">Explore More</a>
-			</div>			
+			</div>	
+
+			<ul class="active">
+				<li></li>
+				<li></li>
+				<li></li>
+				<li></li>
+			</ul>
+
 		</section>		
 	</header>
 	
@@ -45,8 +56,11 @@
 		<section class="projects">
 			<h2>My Projects</h2>
 			<article>	
-					<figure class="my projects">
-						<img src="img/project1.jpg">		
+					<figure class="my projects" >
+						<img src="img/project1.jpg">
+							<figcaption>
+								<h3>Loris ipsum</h3>
+							</figcaption>		
 					</figure>
 
 					<h3>Model S Catalog</h3>
@@ -55,7 +69,10 @@
 
 			<article>			
 					<figure class="my projects">
-						<img src="img/project2.jpg">			
+						<img src="img/project2.jpg">
+							<figcaption>
+								<h3>Loris ipsum</h3>
+							</figcaption>			
 					</figure>
 
 					<h3>Discovery Channel iPad</h3>
@@ -65,7 +82,10 @@
 
 			<article>
 					<figure class="my projects">
-						<img src="img/project3.jpg">			
+						<img src="img/project3.jpg">
+							<figcaption>
+								<h3>Loris ipsum</h3>
+							</figcaption>					
 					</figure>
 
 					<h3>Stuhrling</h3>
@@ -75,7 +95,12 @@
 
 			<article>
 					<figure class="my projects">
-						<img src="img/project4.jpg">				
+						<img src="img/project4.jpg">
+						<div>
+							<figcaption>
+								<h3>Loris ipsum</h3>
+							</figcaption>
+						</div>							
 					</figure>
 
 					<h3>Infinity Spaces</h3>
@@ -84,13 +109,14 @@
 						studios.			
 			</article>
 
-			<div>
+
+			<div class="show">
 				<a href="#">Show More Projects</a>	
 			</div>
+
 		</section>
 
 		<section class="share work">
-			
 			<h2>Showcasing your work has never been more fun</h2>
 			<b>Discover elegant solution for your online portfolio. Fast, reliable, affordable...</b>
 
@@ -111,11 +137,12 @@
 					<li><a href="#"><i class="fa fa-pinterest-p"></i>Pinterest</a></li>
 					<li><a href="#"><i class="fa fa-linkedin"></i>LinkedIn</a></li>				
 				</ul>
+
 			</div>	
 		</section>
 
 <!-- footer| footer| footer| footer| footer| footer| footer| footer|-->
-	<footer>
+	<footer class="cop footer">
 			Copyright &copy; 2015 SAGE Agency Worldwide. All rights reserved.
 	</footer>
 
